--- a/css/main.css
+++ b/css/main.css
@@ -691,7 +691,7 @@ header {
         color: #5c5c5c;
         margin-right: 15px; }
   .cont-productos main .productos-titulo {
-    margin: 60px 0;
+    margin: 50px 0;
     font-size: 30px;
     text-align: center; }
   .cont-productos main .cont-productos-main {
@@ -1223,12 +1223,12 @@ footer {
       display: block;
       cursor: pointer; }
       .navbar .mobile-nav i img {
-        width: 45px;
+        width: 38px;
         margin-left: 40px; }
       .navbar .mobile-nav #ic-han2 {
         display: none; }
     .navbar .link_img_logo .img_logo {
-      width: 130px;
+      width: 110px;
       margin: 0; }
     .navbar nav {
       height: 50px;
@@ -1237,6 +1237,144 @@ footer {
       justify-content: none; }
       .navbar nav ul {
         display: none; }
+    .navbar .carrito_cont2x {
+      display: flex;
+      align-items: center;
+      margin-left: 20px;
+      margin-right: 48px; }
+      .navbar .carrito_cont2x .numCar-total {
+        color: #fff;
+        font-size: 9px;
+        background-color: #3f3f3f;
+        padding: 7px;
+        border-radius: 100%; }
+      .navbar .carrito_cont2x .img_shop2 {
+        width: 38px;
+        margin-right: 0; }
+  .nav2 {
+    height: 20px;
+    background-color: #131313; }
+    .nav2 .mobile-nav {
+      display: block;
+      cursor: pointer; }
+      .nav2 .mobile-nav i img {
+        width: 38px;
+        margin-left: 40px; }
+      .nav2 .mobile-nav #ic-han {
+        display: block; }
+      .nav2 .mobile-nav #ic-han2 {
+        display: none; }
+    .nav2 .link_img_logo {
+      margin-left: 10%; }
+      .nav2 .link_img_logo .img_logo {
+        width: 110px;
+        margin: 0; }
+    .nav2 nav ul {
+      display: none; }
+    .nav2 .carrito_cont {
+      display: flex;
+      align-items: center;
+      margin-left: 20px;
+      margin-right: 48px; }
+      .nav2 .carrito_cont .numCar-total {
+        color: #fff;
+        font-size: 9px;
+        background-color: #3f3f3f;
+        padding: 7px;
+        border-radius: 100%; }
+      .nav2 .carrito_cont .img_shop2 {
+        width: 38px;
+        margin-right: 0; }
+    .nav2 .carrito-overlay .popup {
+      width: 80%; }
+      .nav2 .carrito-overlay .popup .close-cont {
+        width: 100%;
+        height: 5%; }
+      .nav2 .carrito-overlay .popup .cont-pop-carrito .titulo-p-carrito {
+        margin-top: 40px;
+        margin-left: 20px;
+        font-size: 17px; }
+      .nav2 .carrito-overlay .popup .cont-pop-carrito .pop-cont2 {
+        display: flex;
+        align-items: center; }
+        .nav2 .carrito-overlay .popup .cont-pop-carrito .pop-cont2 .producto-img {
+          margin-left: 20px;
+          width: 130px; }
+      .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum {
+        margin: 0 35px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-weight: 300;
+        gap: 20px; }
+        .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad {
+          border: 1px solid #d1d1d19c;
+          display: flex;
+          align-items: center;
+          border-radius: 5px; }
+          .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .menos {
+            padding: 4px 8px;
+            background-color: #cecece; }
+          .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .popCantidad {
+            padding: 4px 8px; }
+          .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .mas {
+            padding: 4px 8px;
+            background-color: #cecece; }
+      .nav2 .carrito-overlay .popup .cont-pop-carrito .precio-el-cont .popPrecio {
+        font-size: 22px; }
+      .nav2 .carrito-overlay .popup .totales-cPopUp {
+        height: 24%; }
+        .nav2 .carrito-overlay .popup .totales-cPopUp .tCPopUp .tCPopUp-total {
+          font-size: 20px; }
+        .nav2 .carrito-overlay .popup .totales-cPopUp .tCPopUp .tCPopUp-precio {
+          font-size: 23px; }
+        .nav2 .carrito-overlay .popup .totales-cPopUp .btnTotal {
+          height: 70%; }
+          .nav2 .carrito-overlay .popup .totales-cPopUp .btnTotal .btnTotal-01 {
+            width: 35%;
+            font-size: 14px; }
+          .nav2 .carrito-overlay .popup .totales-cPopUp .btnTotal .btnTotal-02 {
+            width: 35%;
+            font-size: 14px; }
+  .cont-productos {
+    justify-content: center; }
+    .cont-productos main {
+      justify-content: center; }
+      .cont-productos main .btn {
+        font-size: 11px;
+        padding: 7px 16px; }
+      .cont-productos main .barra_filtros {
+        gap: 30px;
+        display: flex;
+        flex-direction: column; }
+        .cont-productos main .barra_filtros .cont_bf {
+          display: flex; }
+          .cont-productos main .barra_filtros .cont_bf .p_bf {
+            margin-top: 0;
+            font-size: 14px;
+            font-weight: 500;
+            color: #5c5c5c;
+            margin-right: 15px; }
+      .cont-productos main .productos-titulo {
+        margin: 30px 0;
+        font-size: 22px; }
+      .cont-productos main .cont-productos-main {
+        width: 85%;
+        margin-top: 30px;
+        margin-bottom: 50px;
+        gap: 80px;
+        padding: 30px 40px;
+        display: flex;
+        flex-flow: wrap;
+        justify-content: center;
+        align-items: center; }
+        .cont-productos main .cont-productos-main .sect_mv_01 img {
+          width: 135px; }
+        .cont-productos main .cont-productos-main .sect_mv_01 h4 {
+          font-size: 14px; }
+        .cont-productos main .cont-productos-main .sect_mv_01 p {
+          font-size: 15px;
+          margin-bottom: 20px; }
   .nav_and_header {
     height: 500px; }
   header {
@@ -1318,9 +1456,13 @@ footer {
       .main_index .section_nuevos_productos .sect_np_cont .sect_np_01 img {
         width: 130px; }
       .main_index .section_nuevos_productos .sect_np_cont .sect_np_01 p {
-        margin-bottom: 19px; } }
+        margin-bottom: 19px; }
+  .main_index h2 {
+    margin: 0px; } }
 
 @media (max-width: 550px) {
+  h2 {
+    margin: 0px; }
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -1443,6 +1585,104 @@ footer {
           .navbar .carrito-overlay .popup .totales-cPopUp .btnTotal .btnTotal-02 {
             width: 35%;
             font-size: 14px; }
+  .nav2 {
+    height: 60px;
+    padding: 0px; }
+    .nav2 .mobile-nav {
+      display: block;
+      cursor: pointer; }
+      .nav2 .mobile-nav i img {
+        width: 30px;
+        margin-left: 25px; }
+      .nav2 .mobile-nav #ic-han {
+        display: block; }
+      .nav2 .mobile-nav #ic-han2 {
+        display: none; }
+    .nav2 .link_img_logo {
+      width: 38%;
+      display: flex;
+      justify-content: flex-end;
+      margin-left: 0;
+      padding: 0; }
+      .nav2 .link_img_logo .img_logo {
+        width: 90px;
+        margin: 0; }
+    .nav2 nav ul {
+      display: none; }
+    .nav2 .carrito_cont {
+      display: flex;
+      align-items: center;
+      margin-left: 0px;
+      margin-right: 25px; }
+      .nav2 .carrito_cont .numCar-total {
+        color: #fff;
+        font-size: 8px;
+        background-color: #3f3f3f;
+        padding: 7px;
+        border-radius: 100%; }
+      .nav2 .carrito_cont .img_shop2 {
+        width: 28px;
+        margin-right: 0; }
+    .nav2 .carrito-overlay .popup {
+      width: 100%; }
+      .nav2 .carrito-overlay .popup .close-cont {
+        width: 100%;
+        height: 5%; }
+      .nav2 .carrito-overlay .popup .cont-pop-carrito .titulo-p-carrito {
+        margin-top: 40px;
+        margin-left: 20px;
+        font-size: 14px; }
+      .nav2 .carrito-overlay .popup .cont-pop-carrito .pop-cont2 {
+        display: flex;
+        align-items: center; }
+        .nav2 .carrito-overlay .popup .cont-pop-carrito .pop-cont2 .producto-img {
+          margin-left: 20px;
+          width: 100px; }
+      .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum {
+        margin: 0 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-weight: 300;
+        gap: 20px; }
+        .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad {
+          border: 1px solid #d1d1d19c;
+          display: flex;
+          align-items: center;
+          border-radius: 5px; }
+          .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .menos {
+            padding: 5px 10px;
+            background-color: #cecece; }
+          .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .popCantidad {
+            padding: 5px 10px; }
+          .nav2 .carrito-overlay .popup .cont-pop-carrito .cont-popNum .cont-popCantidad .mas {
+            padding: 5px 10px;
+            background-color: #cecece; }
+      .nav2 .carrito-overlay .popup .cont-pop-carrito .precio-el-cont {
+        margin-left: 5px; }
+        .nav2 .carrito-overlay .popup .cont-pop-carrito .precio-el-cont .popPrecio {
+          font-size: 20px; }
+        .nav2 .carrito-overlay .popup .cont-pop-carrito .precio-el-cont .eliminar {
+          width: 20px;
+          background: #3e015a;
+          color: #fff;
+          font-size: 12px;
+          padding: 7px 28px;
+          border-radius: 40px; }
+      .nav2 .carrito-overlay .popup .totales-cPopUp {
+        height: 24%; }
+        .nav2 .carrito-overlay .popup .totales-cPopUp .tCPopUp .tCPopUp-total {
+          font-size: 20px; }
+        .nav2 .carrito-overlay .popup .totales-cPopUp .tCPopUp .tCPopUp-precio {
+          font-size: 23px; }
+        .nav2 .carrito-overlay .popup .totales-cPopUp .btnTotal {
+          height: 70%; }
+          .nav2 .carrito-overlay .popup .totales-cPopUp .btnTotal .btnTotal-01 {
+            width: 35%;
+            font-size: 14px; }
+          .nav2 .carrito-overlay .popup .totales-cPopUp .btnTotal .btnTotal-02 {
+            width: 35%;
+            font-size: 14px; }
   .nav_and_header {
     height: 350px; }
   header {
@@ -1540,6 +1780,45 @@ footer {
           width: 100px; }
         .main_index .section_nuevos_productos .sect_np_cont .sect_np_01 p {
           margin-bottom: 19px; }
+  .cont-productos {
+    justify-content: center; }
+    .cont-productos main {
+      justify-content: center; }
+      .cont-productos main .btn {
+        font-size: 11px;
+        padding: 7px 16px; }
+      .cont-productos main .barra_filtros {
+        gap: 30px;
+        display: flex;
+        flex-direction: column; }
+        .cont-productos main .barra_filtros .cont_bf {
+          display: flex; }
+          .cont-productos main .barra_filtros .cont_bf .p_bf {
+            margin-top: 0;
+            font-size: 14px;
+            font-weight: 500;
+            color: #5c5c5c;
+            margin-right: 15px; }
+      .cont-productos main .productos-titulo {
+        margin: 30px 0;
+        font-size: 22px; }
+      .cont-productos main .cont-productos-main {
+        width: 85%;
+        margin-top: 30px;
+        margin-bottom: 50px;
+        gap: 80px;
+        padding: 30px 20px;
+        display: flex;
+        flex-flow: wrap;
+        justify-content: center;
+        align-items: center; }
+        .cont-productos main .cont-productos-main .sect_mv_01 img {
+          width: 135px; }
+        .cont-productos main .cont-productos-main .sect_mv_01 h4 {
+          font-size: 14px; }
+        .cont-productos main .cont-productos-main .sect_mv_01 p {
+          font-size: 15px;
+          margin-bottom: 20px; }
   footer {
     height: 160px; }
     footer .footer_cont .footer_cont-1 {
